# aoc2022

./: .gitignore  CMakeLists.txt  LICENSE
inc/: dentry.hpp  distress.hpp  elevation.hpp  monkey.hpp  parser.hpp  sand.hpp  sensors_beacons.hpp  trees.hpp
src/: 10a.cpp  10b.cpp  11a.cpp  11b.cpp  12a.cpp  12b.cpp  13a.cpp  13b.cpp  14a.cpp  14b.cpp  15_vis.cpp  15a.cpp  15b.cpp  1a.cpp  1b.cpp  2a.cpp  2b.cpp  3a.cpp  3b.cpp  4a.cpp  4b.cpp  5a.cpp  5b.cpp  6a.cpp  6b.cpp  7a.cpp  7b.cpp  8a.cpp  8b.cpp  9a.cpp  9b.cpp  dentry.cpp  distress.cpp  elevation.cpp  parser.cpp  sand.cpp  sensors_beacons.cpp  trees.cpp
